--- a/requirements.txt
+++ b/requirements.txt
@@ -40,8 +40,14 @@ greenlet==1.1.3
     # via gevent
 imapclient==2.1.0
     # via extract-msg
+joblib==1.1.0
+    # via scikit-learn
 lxml==4.9.1
     # via python-pptx
+numpy==1.23.2
+    # via
+    #   scikit-learn
+    #   scipy
 olefile==0.46
     # via extract-msg
 pdfminer-six==20191110
@@ -58,6 +64,10 @@ python-pptx==0.6.21
     # via textract
 pytz-deprecation-shim==0.1.0.post0
     # via tzlocal
+scikit-learn==1.1.2
+    # via -r .\requirements.in
+scipy==1.9.1
+    # via scikit-learn
 six==1.12.0
     # via
     #   imapclient
@@ -71,6 +81,8 @@ speechrecognition==3.8.1
     # via textract
 textract==1.6.5
     # via -r .\requirements.in
+threadpoolctl==3.1.0
+    # via scikit-learn
 tzdata==2022.2
     # via
     #   pytz-deprecation-shim
