--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,6 @@
 #
 #    pip-compile '.\requirements.in'
 #
-argcomplete==1.10.3
-    # via textract
-beautifulsoup4==4.8.2
-    # via textract
 bottle==0.12.23
     # via
     #   bottle-websocket
@@ -16,20 +12,8 @@ bottle-websocket==0.2.9
     # via eel
 cffi==1.15.1
     # via gevent
-chardet==3.0.4
-    # via
-    #   pdfminer-six
-    #   textract
-compressed-rtf==1.0.6
-    # via extract-msg
-docx2txt==0.8
-    # via textract
-ebcdic==1.1.1
-    # via extract-msg
 eel==0.14.0
     # via -r .\requirements.in
-extract-msg==0.28.7
-    # via textract
 future==0.18.2
     # via eel
 gevent==21.12.0
@@ -38,63 +22,28 @@ gevent-websocket==0.10.1
     # via bottle-websocket
 greenlet==1.1.3
     # via gevent
-imapclient==2.1.0
-    # via extract-msg
 joblib==1.1.0
     # via scikit-learn
-lxml==4.9.1
-    # via python-pptx
 numpy==1.23.2
     # via
     #   scikit-learn
     #   scipy
-olefile==0.46
-    # via extract-msg
-pdfminer-six==20191110
-    # via textract
-pillow==9.2.0
-    # via python-pptx
 pycparser==2.21
     # via cffi
-pycryptodome==3.15.0
-    # via pdfminer-six
 pyparsing==3.0.9
     # via eel
-python-pptx==0.6.21
-    # via textract
-pytz-deprecation-shim==0.1.0.post0
-    # via tzlocal
+pypdf2==2.10.4
+    # via -r .\requirements.in
 scikit-learn==1.1.2
     # via -r .\requirements.in
 scipy==1.9.1
     # via scikit-learn
-six==1.12.0
-    # via
-    #   imapclient
-    #   pdfminer-six
-    #   textract
-sortedcontainers==2.4.0
-    # via pdfminer-six
-soupsieve==2.3.2.post1
-    # via beautifulsoup4
-speechrecognition==3.8.1
-    # via textract
-textract==1.6.5
-    # via -r .\requirements.in
 threadpoolctl==3.1.0
     # via scikit-learn
-tzdata==2022.2
-    # via
-    #   pytz-deprecation-shim
-    #   tzlocal
-tzlocal==4.2
-    # via extract-msg
+typing-extensions==4.3.0
+    # via pypdf2
 whichcraft==0.6.1
     # via eel
-xlrd==1.2.0
-    # via textract
-xlsxwriter==3.0.3
-    # via python-pptx
 zope-event==4.5.0
     # via gevent
 zope-interface==5.4.0
