--- a/requirements.txt
+++ b/requirements.txt
@@ -12,41 +12,52 @@ bottle-websocket==0.2.9
     # via eel
 cffi==1.15.1
     # via gevent
+docx2txt==0.8
+    # via -r .\requirements.in
 eel==0.14.0
     # via -r .\requirements.in
 future==0.18.2
     # via eel
-gevent==21.12.0
+gevent==22.10.2
     # via gevent-websocket
 gevent-websocket==0.10.1
     # via bottle-websocket
-greenlet==1.1.3
+greenlet==2.0.1
     # via gevent
-joblib==1.1.0
+joblib==1.2.0
     # via scikit-learn
-numpy==1.23.2
+numpy==1.23.4
     # via
+    #   pandas
     #   scikit-learn
     #   scipy
+pandas==1.5.1
+    # via -r .\requirements.in
 pycparser==2.21
     # via cffi
 pyparsing==3.0.9
     # via eel
 pypdf2==2.10.4
     # via -r .\requirements.in
+python-dateutil==2.8.2
+    # via pandas
+pytz==2022.6
+    # via pandas
 scikit-learn==1.1.2
     # via -r .\requirements.in
-scipy==1.9.1
+scipy==1.9.3
     # via scikit-learn
+six==1.16.0
+    # via python-dateutil
 threadpoolctl==3.1.0
     # via scikit-learn
-typing-extensions==4.3.0
+typing-extensions==4.4.0
     # via pypdf2
 whichcraft==0.6.1
     # via eel
 zope-event==4.5.0
     # via gevent
-zope-interface==5.4.0
+zope-interface==5.5.1
     # via gevent
 
 # The following packages are considered to be unsafe in a requirements file:
