--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,16 @@
 #
 #    pip-compile '.\requirements.in'
 #
+aiohttp==3.8.3
+    # via -r .\requirements.in
+aiosignal==1.3.1
+    # via aiohttp
+async-timeout==4.0.2
+    # via aiohttp
+attrs==22.1.0
+    # via aiohttp
+beautifulsoup4==4.11.1
+    # via -r .\requirements.in
 bottle==0.12.23
     # via
     #   bottle-websocket
@@ -12,10 +22,16 @@ bottle-websocket==0.2.9
     # via eel
 cffi==1.15.1
     # via gevent
+charset-normalizer==2.1.1
+    # via aiohttp
 docx2txt==0.8
     # via -r .\requirements.in
 eel==0.14.0
     # via -r .\requirements.in
+frozenlist==1.3.3
+    # via
+    #   aiohttp
+    #   aiosignal
 future==0.18.2
     # via eel
 gevent==22.10.2
@@ -24,8 +40,16 @@ gevent-websocket==0.10.1
     # via bottle-websocket
 greenlet==2.0.1
     # via gevent
+idna==3.4
+    # via yarl
 joblib==1.2.0
     # via scikit-learn
+lxml==4.9.1
+    # via python-pptx
+multidict==6.0.2
+    # via
+    #   aiohttp
+    #   yarl
 numpy==1.23.4
     # via
     #   pandas
@@ -33,6 +57,8 @@ numpy==1.23.4
     #   scipy
 pandas==1.5.1
     # via -r .\requirements.in
+pillow==9.3.0
+    # via python-pptx
 pycparser==2.21
     # via cffi
 pyparsing==3.0.9
@@ -41,6 +67,8 @@ pypdf2==2.10.4
     # via -r .\requirements.in
 python-dateutil==2.8.2
     # via pandas
+python-pptx==0.6.21
+    # via -r .\requirements.in
 pytz==2022.6
     # via pandas
 scikit-learn==1.1.2
@@ -49,12 +77,18 @@ scipy==1.9.3
     # via scikit-learn
 six==1.16.0
     # via python-dateutil
+soupsieve==2.3.2.post1
+    # via beautifulsoup4
 threadpoolctl==3.1.0
     # via scikit-learn
 typing-extensions==4.4.0
     # via pypdf2
 whichcraft==0.6.1
     # via eel
+xlsxwriter==3.0.3
+    # via python-pptx
+yarl==1.8.1
+    # via aiohttp
 zope-event==4.5.0
     # via gevent
 zope-interface==5.5.1
