changes in requirements

--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,7 @@ eel==0.14.0
 scikit-learn==1.1.2
 docx2txt==0.8
 pandas==1.5.1
-python-pptx
+python-pptx==0.6.21
 BeautifulSoup4
-aiohttp
+requests
 google
