--- a/requirements.txt
+++ b/requirements.txt
@@ -4,52 +4,42 @@
 #
 #    pip-compile '.\requirements.in'
 #
-aiohttp==3.8.3
-    # via -r .\requirements.in
-aiosignal==1.3.1
-    # via aiohttp
-async-timeout==4.0.2
-    # via aiohttp
-attrs==22.1.0
-    # via aiohttp
 beautifulsoup4==4.11.1
-    # via -r .\requirements.in
+    # via
+    #   -r .\requirements.in
+    #   google
 bottle==0.12.23
     # via
     #   bottle-websocket
     #   eel
 bottle-websocket==0.2.9
     # via eel
+certifi==2022.9.24
+    # via requests
 cffi==1.15.1
     # via gevent
 charset-normalizer==2.1.1
-    # via aiohttp
+    # via requests
 docx2txt==0.8
     # via -r .\requirements.in
 eel==0.14.0
     # via -r .\requirements.in
-frozenlist==1.3.3
-    # via
-    #   aiohttp
-    #   aiosignal
 future==0.18.2
     # via eel
 gevent==22.10.2
     # via gevent-websocket
 gevent-websocket==0.10.1
     # via bottle-websocket
+google==3.0.0
+    # via -r .\requirements.in
 greenlet==2.0.1
     # via gevent
 idna==3.4
-    # via yarl
+    # via requests
 joblib==1.2.0
     # via scikit-learn
 lxml==4.9.1
     # via python-pptx
-multidict==6.0.2
-    # via
-    #   aiohttp
-    #   yarl
 numpy==1.23.4
     # via
     #   pandas
@@ -71,6 +61,8 @@ python-pptx==0.6.21
     # via -r .\requirements.in
 pytz==2022.6
     # via pandas
+requests==2.28.1
+    # via -r .\requirements.in
 scikit-learn==1.1.2
     # via -r .\requirements.in
 scipy==1.9.3
@@ -83,12 +75,12 @@ threadpoolctl==3.1.0
     # via scikit-learn
 typing-extensions==4.4.0
     # via pypdf2
+urllib3==1.26.12
+    # via requests
 whichcraft==0.6.1
     # via eel
 xlsxwriter==3.0.3
     # via python-pptx
-yarl==1.8.1
-    # via aiohttp
 zope-event==4.5.0
     # via gevent
 zope-interface==5.5.1
